Now have roscopter working with BTraj in SubT gazebo9 sim world. Was stuck on roscopter parameter issue, problem was namespacing and private/public, should fix in future.

--- a/roscopter/CMakeLists.txt
+++ b/roscopter/CMakeLists.txt
@@ -11,6 +11,7 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   nav_msgs
   sensor_msgs
+  marble_uav_state_machine_msgs
   rosbag
   roslib
 )
